--- a/server/app/views/index.ejs
+++ b/server/app/views/index.ejs
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title><%= title %></title>
-    </head>
-    <body>
-        <% if (userFullName) { %>
-            <h2>Hello <%=userFullName%></h2>
-            <a href="/signout">Sign out</a>
-        <% } else { %>
-            <a href="/signup">Sign Up</a>
-            <a href="/signin">Sign In</a>
-        <% } %>
-        <br>
-        <img src="images/logo.png" alt="Logo">
-    </body>
+<html xmlns:ng="http://angularjs.org">
+<head>
+  <title><%= title %></title>
+</head>
+<body>
+  <% if (userFullName) { %>
+    <h2>Hello <%=userFullName%> </h2>
+    <a href="/signout">Sign out</a>
+  <% } else { %>
+    <a href="/signup">Signup</a>
+    <a href="/signin">Signin</a>
+  <% } %>
+
+  <section ng-include="'example/views/example.client.view.html'"></section>
+
+  <script type="text/javascript" src="/lib/angular/angular.js"></script>
+  <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
+
+  <script type="text/javascript" src="/example/example.client.module.js"></script>
+
+  <script type="text/javascript" src="/example/controllers/example.client.controller.js"></script>
+
+  <script type="text/javascript" src="/application.js"></script>
+</body>
 </html>
