quick local authentication manipulation with angular

--- a/server/app/views/index.ejs
+++ b/server/app/views/index.ejs
@@ -4,16 +4,19 @@
   <title><%= title %></title>
 </head>
 <body>
-  <% if (userFullName) { %>
-    <h2>Hello <%=userFullName%> </h2>
-    <a href="/signout">Sign out</a>
+  <% if (user) { %>
+        <a href="/signout">Sign out</a>
   <% } else { %>
     <a href="/signup">Signup</a>
     <a href="/signin">Signin</a>
   <% } %>
 
   <section ng-view></section>
-  
+
+  <script type="text/javascript">
+    window.user = <%- user || null %>;
+  </script>
+
   <script type="text/javascript" src="/lib/angular/angular.js"></script>
   <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
 
@@ -23,6 +26,10 @@
 
   <script type="text/javascript" src="/example/config/example.client.routes.js"></script>
 
+  <script type="text/javascript" src="/users/users.client.module.js"></script>
+
+  <script type="text/javascript" src="/users/services/auth.client.service.js"></script>
+  
   <script type="text/javascript" src="/application.js"></script>
 </body>
 </html>
