--- a/server/public/example/views/example.client.view.html
+++ b/server/public/example/views/example.client.view.html
@@ -1,4 +1,4 @@
 <section ng-controller=ExampleController>
-    <input type=text id=text1 ng-model=name>
-    <input type=text id=text2 ng-model=name>
+    <input type=text id=text1 ng-model=firstName>
+    <input type=text id=text2 ng-model=lastName>
 </section>
